"""
Representations of domain objects (Devices).
"""
from __future__ import annotations

from dataclasses import dataclass, field

from qtools.data.domain import DomainObject
from qtools.data.yaml import DomainYAMLObject


@dataclass
class Factory(DomainObject, DomainYAMLObject):
    """Represents the database entry of a factory."""

    yaml_tag = "!Factory"

    @classmethod
    def create(cls, name: str, **kwargs) -> Factory:
        """Creates a Factory object."""
        kwargs.update({
            "name": name,
        })
        return super()._create(**kwargs)

    @classmethod
    def get_all(cls) -> list[Factory]:
        return super()._get_all(fn_name="factories")

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateFactory")


@dataclass
class Wafer(DomainObject, DomainYAMLObject):
    """Represents the database entry of a wafer."""

    yaml_tag = "!Wafer"

    description: str
    productionDate: str  # pylint: disable=invalid-name
    layout: str
    factory: Factory

    # pylint: disable=invalid-name
    @classmethod
    def create(
        cls,
        name: str,
        productionDate: str,
        factory: Factory,
        description: str | None = None,
        layout: str | None = None,
        **kwargs,
    ) -> Wafer:
        """Creates a Wafer object."""
        kwargs.update(
            {
                "name": name,
                "description": description,
                "productionDate": productionDate,
                "layout": layout,
                "factory": factory,
            }
        )
        return super()._create(**kwargs)

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateWafer")


@dataclass
class Sample(DomainObject, DomainYAMLObject):
    """Represents the database entry of a sample."""

    yaml_tag = "!Sample"

    description: str
    creator: str
    wafer: Wafer
    factory: Factory
    layout: SampleLayout

    @classmethod
    def create(
        cls,
        name: str,
        wafer: Wafer,
        factory: Factory,
        layout: SampleLayout,
        description: str | None = None,
        creator: str | None = None,
        **kwargs,
    ) -> Sample:
        """Creates a Sample object."""
        kwargs.update(
            {
                "name": name,
                "description": description,
                "creator": creator,
                "wafer": wafer,
                "factory": factory,
                "layout": layout,
            }
        )
        return super()._create(**kwargs)

    @classmethod
    def get_all(cls) -> list[Sample]:
        return super()._get_all("samples")

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateSample")


@dataclass
class SampleLayout(DomainObject, DomainYAMLObject):
    """Represents the database entry of a sample layout."""

    yaml_tag = "!SampleLayout"

    mask: str

    @classmethod
    def create(cls, name: str, mask: str | None = None, **kwargs) -> SampleLayout:
        """Creates a SampleLayout object."""
        kwargs.update({
            "name": name,
            "mask": mask,
        })
        return super()._create(**kwargs)

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateSampleLayout")


@dataclass
class Device(DomainObject, DomainYAMLObject):
    """Represents the database entry of a device."""

    yaml_tag = "!Device"

    description: str
    layoutParameters: str  ## pylint: disable=invalid-name
    layout: DeviceLayout
    sample: Sample

    # pylint: disable=invalid-name
    @classmethod
    def create(
        cls,
        name: str,
        layout: DeviceLayout,
        sample: Sample,
        description: str | None = None,
        layoutParameters: str | None = None,
        **kwargs,
    ) -> Device:
        """Creates a Device object."""
        kwargs.update(
            {
                "name": name,
                "description": description,
                "layoutParameters": layoutParameters,
                "layout": layout,
                "sample": sample,
            }
        )
        return super()._create(**kwargs)

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateDevice")


@dataclass
class DeviceLayout(DomainObject, DomainYAMLObject):
    """Represents the database entry of a device layout."""

    yaml_tag = "!DeviceLayout"

    mask: str
    image: str
    creator: str
    terminals: list[Terminal] = field(default_factory=list)

    # TODO: incorporate terminal List
    @classmethod
    def create(
        cls,
        name: str,
        mask: str | None = None,
        image: str | None = None,
        creator: str | None = None,
        **kwargs,
    ) -> DeviceLayout:
        """Creates a DeviceLayout object."""
        kwargs.update(
            {
                "name": name,
                "mask": mask,
                "image": image,
                "creator": creator,
            }
        )
        return super()._create(**kwargs)

    def save(self) -> str:
        return super()._save(
            fn_name="saveOrUpdateDeviceLayout",
            field_names=["name", "pid", "mask", "image", "creator"],
        )


@dataclass
class Terminal(DomainObject, DomainYAMLObject):
    """Represents the database entry of a terminal."""

    yaml_tag = "!Terminal"

    function: str
    number: int

    @classmethod
    def create(
        cls,
        name: str,
        function: str,
        number: int | None = None,
        **kwargs,
    ) -> Terminal:
        """Creates a Terminal object."""
        kwargs.update({"name": name, "function": function, "number": number})
        return super()._create(**kwargs)

    def save(self) -> str:
        return super()._save(fn_name="saveOrUpdateTerminal")
